# rainbow

./: README.md
datasets/: readme.txt
datasets/Brotli/Alexa/compressed/: 1-www.google.com.txt.br  10-www.twitter.com.txt.br  100-www.txxx.com.txt.br  101-www.haosou.com.txt.br  102-www.google.com.sa.txt.br  103-www.google.com.ar.txt.br  104-www.google.co.th.txt.br  105-www.ask.com.txt.br  106-www.nicovideo.jp.txt.br  107-www.google.com.pk.txt.br  108-www.amazon.co.uk.txt.br  109-www.bongacams.com.txt.br  110-www.rakuten.co.jp.txt.br  111-www.savefrom.net.txt.br  112-www.youth.cn.txt.br  (+414 more)
decoding/naive/: compile.sh
decoding/rainbow/: compile.sh
decoding/scripts/: GetFigure6-Alexa.sh  GetFigure6-COVID-19.sh  GetFigure6-Enwik.sh  GetFigure6-Google.sh  GetFigure6.sh
decoding/twins/: compile.sh  gzip-back.cpp  gzip.cpp  twins.cpp
decoding/twins/zlib-1.2.11/: adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.c  inffast.lo  inflate.c  inflate.lo  libz.so.1.2.11  minigzip  minigzip64  minigzipsh  trees.lo  zlib.h  zutil.lo
matching/naive/: CMakeLists.txt  compile.sh  main.cpp  utils.cpp  utils.h
matching/rainbow/: CMakeLists.txt  dictionary.h  main.cpp  utils.cpp  utils.h
matching/scripts/: GetFigure7(a).sh  GetFigure7(b).sh  GetFigure7(c).sh  GetFigure7(d).sh
matching/twins/: CMakeLists.txt  dictionary.h  main.cpp  utils.cpp  utils.h
tables/: rna0-accept.txt  rna0.txt  rna1-accept.txt  rna1.txt  rna2-accept.txt  rna2.txt  snort24-accept.txt  snort31-accept.txt  snort34-accept.txt
(+859 files in other folders)
